@@ -12,6 +12,7 @@
     same way), levers, buttons, portals.
   * Fixed an issue loading worlds which don't yet include the "Dimension" tag
   * Increased default chunk-highlighting range
+  * Should correctly colorize grass if needed, using any texture pack.
   
 Minecraft X-Ray 2.7 Maintenance Branch 3 (2010.12.08)
 
